; ModuleID = '/home/carl/AnghaBench/redis/src/extr_scripting.c_luaRedisReturnSingleFieldTable.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_scripting.c_luaRedisReturnSingleFieldTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TSTRING = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"wrong number or type of arguments\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @luaRedisReturnSingleFieldTable(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @lua_gettop(i32* %6)
  %8 = icmp ne i32 %7, 1
  br i1 %8, label %14, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @lua_type(i32* %10, i32 -1)
  %12 = load i64, i64* @LUA_TSTRING, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %9, %2
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @luaPushError(i32* %15, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %27

17:                                               ; preds = %9
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @lua_newtable(i32* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @lua_pushstring(i32* %20, i8* %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @lua_pushvalue(i32* %23, i32 -3)
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @lua_settable(i32* %25, i32 -3)
  store i32 1, i32* %3, align 4
  br label %27

27:                                               ; preds = %17, %14
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local i64 @lua_type(i32*, i32) #1

declare dso_local i32 @luaPushError(i32*, i8*) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_settable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
